# KFO-Client

./: Attorney_Online.pro  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: build.yml
include/: aoapplication.h  aocharmovie.h  aoclocklabel.h  aographicsview.h  aolayer.h  aotextarea.h  courtroom.h  datatypes.h  lobby.h  mediatester.h  networkmanager.h  options.h
include/video/: videoscreen.h
include/widgets/: aooptionsdialog.h
resource/: logo-client.rc
resource/ui/: options_dialog.ui
src/: aoapplication.cpp  aoapplication.h  aocharbutton.cpp  aocharbutton.h  aocharmovie.cpp  aoclocklabel.cpp  aoemotebutton.cpp  aoemotebutton.h  aographicsview.cpp  aographicsview.h  aolayer.cpp  aolayer.h  aomusicplayer.cpp  aotextarea.cpp  aoutils.cpp  charselect.cpp  courtroom.cpp  courtroom.h  datatypes.h  demoserver.cpp  discord_rich_presence.cpp  discord_rich_presence.h  emotes.cpp  eventfilters.h  evidence.cpp  lobby.cpp  main.cpp  mediatester.cpp  mediatester.h  networkmanager.cpp  options.cpp  options.h  packet_distribution.cpp  path_functions.cpp  text_file_functions.cpp  webcache.cpp  webcache.h
src/video/: videoscreen.cpp  videoscreen.h
src/widgets/: aooptionsdialog.cpp  aooptionsdialog.h
updatescript/: update.bat  updatescript.ps1
